OR-1101 update swagger config
